Correcting name of package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "Non official BraspagApiSdk",
+	"name" : "Non-official-BraspagApiSdk",
 	"description" : "Non official Braspag API PHP SDK",
 	"authors" : [{
 			"name" : "Paulo Fernandes",
